scripts/nullaway/original/urlcbcf8d4d58_vikaleshch_task1_tgz-pJ8-by_epam_christmasgift_main_MainJ8.txt
../original/urlcbcf8d4d58_vikaleshch_task1_tgz-pJ8-by_epam_christmasgift_main_MainJ8/src/by/epam/christmasgift/logic/CandyParser.java:20: error: [NullAway] @NonNull static field instance not initialized
    private static CandyParser instance;
                               ^
    (see http://t.uber.com/nullaway )
../original/urlcbcf8d4d58_vikaleshch_task1_tgz-pJ8-by_epam_christmasgift_main_MainJ8/src/by/epam/christmasgift/candy/builder/CaramelBuilder.java:12: error: [NullAway] initializer method does not guarantee @NonNull field caramelType (line 10) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public CaramelBuilder(int protein, int fat, int carbohydrate,
           ^
    (see http://t.uber.com/nullaway )
../original/urlcbcf8d4d58_vikaleshch_task1_tgz-pJ8-by_epam_christmasgift_main_MainJ8/src/by/epam/christmasgift/candy/builder/LollipopBuilder.java:12: error: [NullAway] initializer method does not guarantee @NonNull field flavor (line 10) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public LollipopBuilder(int protein, int fat, int carbohydrate,
           ^
    (see http://t.uber.com/nullaway )
../original/urlcbcf8d4d58_vikaleshch_task1_tgz-pJ8-by_epam_christmasgift_main_MainJ8/src/by/epam/christmasgift/candy/builder/ChocolateBuilder.java:10: error: [NullAway] initializer method does not guarantee @NonNull fields chocolateType (line 7), stuffingType (line 8) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public ChocolateBuilder(int protein, int fat, int carbohydrate,
           ^
    (see http://t.uber.com/nullaway )
4 errors
